src/objects/Campaign_Pricing__c.object
<CustomObject>
    <description>Object for storing pricing data</description>
    <fields>
        <fullName>Contract_Rate_Type__c</fullName>
        <formula>IF(  ISPICKVAL(  contract_margin__c ,  &quot;Y&quot;) , &quot;Variable&quot;, &quot;Fixed&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Rate Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coupon_Status__c</fullName>
        <description>Shows if coupon matches a campaign program</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Coupon Status</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Penalty_Rate_Type__c</fullName>
        <formula>IF(  ISPICKVAL( penalty_margin__c,  &quot;Y&quot;) , &quot;Variable&quot;, &quot;Fixed&quot;)</formula>
        <label>Penalty Rate Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Peoplesoft_rel_code__c</fullName>
        <description>Psoft Program Relationship Code</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Psoft Program Relationship Code</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contract_margin__c</fullName>
        <label>Contract Margin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                    <default>true</default>
                    <label>Y</label>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>contract_rate_pct__c</fullName>
        <label>Contract Rate Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>coup_code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Coupon Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>days_to_pay__c</fullName>
        <label>Days to Pay</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fixed_late_fee__c</fullName>
        <label>Fixed Late Fee</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>late_fee_type__c</fullName>
        <description>Late fee type (P = percentage, F = fixed)</description>
        <label>Late Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>minimum_payment_percentage__c</fullName>
        <description>Minimum Payment Percentage</description>
        <label>Minimum Payment Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>nbr_billing_cyles__c</fullName>
        <description># of Billing Cycles Promotional Rate is valid for (if one exists for the coupon)</description>
        <encryptionScheme>None</encryptionScheme>
        <label># of Billing Cycles Promo Rate is valid</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>over_limit_fee__c</fullName>
        <label>Over Limit Fee</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>paper_delivery_fee__c</fullName>
        <label>Paper Delivery Fee</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pct_late_fee__c</fullName>
        <label>Percent Late Fee</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pen_rate_pct__c</fullName>
        <label>Penalty Percentage Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>penalty_margin__c</fullName>
        <label>Penalty Margin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                    <default>true</default>
                    <label>Y</label>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>penalty_rate_ceiling__c</fullName>
        <label>Penalty Rate Ceiling</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>prime_rate__c</fullName>
        <description>Most recent Prime Rate</description>
        <label>Prime Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>prime_rate_effective_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Prime Rate Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>promo_add_prime__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Promo Add Prime</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>promo_periods__c</fullName>
        <label>Promo Periods</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>promotional_rate__c</fullName>
        <label>Promotional Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>return_payment_fee__c</fullName>
        <label>Return Payment Fee</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>risk_code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Risk Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Campaign Pricing</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Campaign Pricing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>